[build-system]
requires = ["setuptools", "wheel", "pytest-runner"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore",
    "default:::comitup",
    "default:::web",
    "default:::cli"
]

asyncio_default_fixture_loop_scope = "function"

[tool.tox]
legacy_tox_ini = """
    [tox]
    env_list =
        TEST
        PEP8
        MYPY

    [testenv:TEST]
    deps =
        pytest
        dbus-python
        python-networkmanager
        flask
        pygobject
        apt-wrapper
        cachetools

    commands_pre =
        apt status libcairo2-dev
        apt status gobject-introspection
        apt status libgirepository-2.0-dev
        apt status python3-dev
        apt status libdbus-glib-1-dev
        apt status libdbus-1-dev

    commands = pytest

    [testenv:PEP8]
    deps = flake8

    commands = flake8 setup.py comitup cli web test

    [testenv:MYPY]
    deps =
        mypy
        types-tabulate
        types-Flask
        types-cachetools
        types-RPi-GPIO

    commands = mypy comitup cli web test
"""

[tool.mypy]
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = [
    "mypy-dbus",
    "dbus",
    "dbus.mainloop.glib",
    "dbus.service",
    "gi",
    "gi.repository.GLib",
    "pytest",
    "RPi",
    "venv",
]

ignore_missing_imports = true
